fix for The checkbox within the tooltip is not aligned to the text; 'Don't show this message again' and site specific text in the welcome tooltip.

--- a/wordpress/wp-content/themes/Eris/assets/sass/global/_navigation.scss
+++ b/wordpress/wp-content/themes/Eris/assets/sass/global/_navigation.scss
@@ -101,7 +101,7 @@ $arrow-height: 3px;
 	#new_modal_form {
 		font-size: 12px;
 		#message_hide {
-			vertical-align: sub;
+			vertical-align: top;
 		}
 	}
   }
